--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -186,9 +186,11 @@ V neposlední řadě, plná kontrola nad mečem nemusí vhodně ladit s \textbf{
 \bigbreak
 Finálně, pokud jsme všechny tyto problémy vyřešili, čeká nás implementace systému. Hráči jsme nabídli v podstatě neomezené možnosti, nabízí se tedy otázka, jakým způsobem se hodláme ujistit, že možnosti skutečně neomezené jsou a nevyskytly se nějaké \textbf{neočekávané okrajové případy}, které nebyly ošetřeny a povedou k nedefinovanému chování? Jednou z cest je přeci jen kontrolu nad mečem omezit a smrsknout ji na stále velkou, avšak \textbf{konečnou množinu stavů}, které jsou tvůrci schopni projít jednu po druhé a ujistit se, že každý funguje, jak zamýšleli. Jedinou další alternativou se zdá být \textbf{plně realistická fyzikální simulace meče} - problémům, které tato cesta přináší, je věnována převážná část této práce.  
 \bigbreak
-Vidíme, že poskytnout hráči přímou kontrolu nad mečem, je nevděčná práce vyžadující mnoho kompromisů. V historii najdeme pouze několik her, které se pokusily s ním popasovat, každá svým unikátním způsobem. Na ty se nyní podíváme blíže.
+Vidíme, že poskytnout hráči přímou kontrolu nad mečem, je nevděčná práce vyžadující mnoho kompromisů. V historii najdeme pouze několik her, které se s ní pokusily popasovat, každá svým unikátním způsobem. Na ty se nyní podíváme blíže.
 
 \subsection{Die by the Sword}
+
+
 
 \clearpage
 (stručné představení hry)
