add some hints for ch.4

--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -1,5 +1,29 @@
 \chapter{Implementace}
-ffds
+
+\section{Návrh systému}
+
+\subsection{Stručný celkový přehled}
+
+- šermíř.. rigidbody
+  meč.. další rigidbody připojené jointem
+
+(insert uml diagram)
+- SwordMovement, SwordsmanMovement a související komponenty (možná rozdělit do 2 diagramů?)
+
+
+\subsection{Zpracování uživatelského vstupu}
+
+\subsection{Mody ovládání}
+
+\subsection{Animace šermíře}
+
+\subsection{Počítání zranění}
+
+
+\section{Stabilita simulace}
+
+\subsection{Kolize mečů}
+
 
 
 \section{Shrnutí}
