--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -7,7 +7,7 @@
 - šermíř.. rigidbody
   meč.. další rigidbody připojené jointem
 
-(insert uml diagram)
+(insert uml diagram here)
 - SwordMovement, SwordsmanMovement a související komponenty (možná rozdělit do 2 diagramů?)
 
 
@@ -22,8 +22,11 @@
 
 \section{Stabilita simulace}
 
-\subsection{Kolize mečů}
+\subsection{Jak nastavit cílovou rotaci jointu}
 
+\subsection{Ladění parametrů}
+
+\subsection{Kolize mečů}
 
 
 \section{Shrnutí}
